--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -17,72 +17,86 @@
 </style>
 </head>
 <body>
-	
-<div class="main-box">
-  <div class="slider-cont">
-  	<center><img id="logo" src="https://bmsit.ac.in/assets/logo-5527329e306f832982eb5b10b8325a606bc2058ae61b4aa5705c8c2d4e436212.png" ></center><br>	
-    <center><h3 style="color: #000;">Careers at BMSIT</h3><center>
-  </div>
-  
-  
-  
-  <div class="form-cont">
+  <div class="form">
+      
+      <ul class="tab-group">
+        <li class="tab active"><a href="#signup">Sign Up</a></li>
+        <li class="tab"><a href="#login">Log In</a></li>
+      </ul>
+      
+      <div class="tab-content">
+        <div id="signup">   
+          <h1>Register Now</h1>
+          
+          <form action="/signup/" method="post">{% csrf_token %}
+          
+          <div class="top-row">
+            <div class="field-wrap">
+              <label>
+                Username<span class="req">*</span>
+              </label>
+              <input id="id_username" name="username" type="text" required autocomplete="off" />
+            </div>
+        
 
-    <div class="top-buttons">
-      <button class="to-signup top-active-button">
-        Sign Up
-      </button>
-      <button class="to-signin">
-        Sign In
-      </button>
-    </div>
-    
-    <div class="form form-signup">
-      <form style="color:black;" action="/signup/" method="POST">{% csrf_token %}
-        <lable>USERNAME</lable>
-        <input type="text" name="username" id="id_username"
-               placeholder="Your desired username">
-        <lable>E-MAIL</lable>
-        <input type="email" name="email" id="id_email"
-               placeholder="Your e-mail">
-        <lable>PASSWORD</lable>
-        <input type="password" name="password1" id="id_password1"
-               placeholder="Your password">
-        <lable>CONFIRM PASSWORD</lable>
-        <input type="password" name="password2" id="id_password2"
-               placeholder="Your password">
-        <input type="submit"
-               class="form-btn"
-               value="Sign Up"/>
-        <a href="#" class="lined-link to-signin-link">I'm already member</a>
-      </form>
-    </div>
+          <div class="field-wrap">
+            <label>
+              Email Address<span class="req">*</span>
+            </label>
+            <input id="id_email" name="email" type="email"required autocomplete="off"/>
+          </div>
+          
+          <div class="field-wrap">
+            <label>
+              Set A Password<span class="req">*</span>
+            </label>
+            <input  id="id_password1" name="password1" type="password"required autocomplete="off"/>
+          </div>
 
-    <div style="margin-top:-10%;" class="form form-signin">
-      <form action="/login/" method="POST">{% csrf_token %}
-        <lable>E-MAIL</lable>
-        <input type="email" name="username" id="id_username"
-               placeholder="Your e-mail">
-        <lable>PASSWORD</lable>
-        <input type="password" name="password" id="id_password"
-               placeholder="Your password">
-        <input type="submit"
-               class="form-btn"
-               value="Sign In"/>
-        <a href="#" class="lined-link to-signup-link">Create new account</a>
-      </form>
-    </div>
-  </div>
-  <div class="clear-fix"></div>
-</div>
-	
+          <div class="field-wrap">
+            <label>
+              Confirm Password<span class="req">*</span>
+            </label>
+            <input id="id_password2" name="password2" type="password"required autocomplete="off"/>
+          </div>
+          
+          <button type="submit" class="button button-block"/>Get Started</button>
+          
+          </form>
+
+        </div>
+        
+        <div id="login">   
+          <h1>Welcome Back!</h1>
+          
+          <form action="/login/" method="post">{% csrf_token %}
+          
+            <div class="field-wrap">
+            <label>
+              Email Address<span class="req">*</span>
+            </label>
+            <input  name="username" id="id_username" type="email"required autocomplete="off"/>
+          </div>
+          
+          <div class="field-wrap">
+            <label>
+              Password<span class="req">*</span>
+            </label>
+            <input  name="password" id="id_password" type="password"required autocomplete="off"/>
+          </div>
+          
+          <p class="forgot"><a href="#">Forgot Password?</a></p>
+          
+          <button class="button button-block"/>Log In</button>
+          
+          </form>
+
+        </div>
+        
+      </div><!-- tab-content -->
+      
+</div> <!-- /form -->
 	<script src="{% static 'js/login.js' %}"></script>
-  <script>
-  $(function() {
-    $('#logo').removeAttr('style');
-    $('#logo').css('width', '100');
-    $('#logo').css('margin-top', '30%');
-  })
-  </script>
+  
 </body>
 </html>
