--- a/main/static/css/registration/login.css
+++ b/main/static/css/registration/login.css
@@ -1,242 +1,173 @@
-/* @import url('https://fonts.googleapis.com/css?family=Roboto:100,300,400,700'); */
-
-@import url('https://fonts.googleapis.com/css?family=Raleway:200,300,400,700');
-
-/************ Start Main Rules **************/
-*{
-  margin: 0;
-  padding: 0;
-  outline: none;
+*, *:before, *:after {
   box-sizing: border-box;
-/*   font-family: 'Roboto', sans-serif; */font-family: 'Raleway', sans-serif;
 }
 
-body{background: #536192  }
-
-.main-box{
-  position: relative;
-  display: block;
-  width: 90%;
-  
-  margin: 50px auto;
-  border-radius: 8px;
-  overflow: hidden;
-  background-color:white !important;
+html {
+  overflow-y: scroll;
 }
 
-.lined-link{
-  position: relative;
+body {
+  background: #c1bdba;
+  font-family: 'Titillium Web', sans-serif;
+}
+
+a {
   text-decoration: none;
-  transition: all 0.2s linear
+  color: #1ab188;
+  transition: .5s ease;
+}
+a:hover {
+  color: #179b77;
 }
 
-.lined-link:hover{
-  opacity: 0.5
+.form {
+  background: rgba(19, 35, 47, 0.9);
+  padding: 40px;
+  max-width: 600px;
+  margin: 40px auto;
+  border-radius: 4px;
+  box-shadow: 0 4px 10px 4px rgba(19, 35, 47, 0.3);
 }
 
-.lined-link:after {
-  position: absolute;
+.tab-group {
+  list-style: none;
+  padding: 0;
+  margin: 0 0 40px 0;
+}
+.tab-group:after {
   content: "";
-  width: 100%;
-  left: 0;
-  bottom: -2px;
-  border: none;
-  border-bottom: 1px solid #63d5c4;
-}
-
-/************ Start Slider Container **************/
-.slider-cont,
-.form-cont{
-  width: 50%;
-  height: 100%;
-  float: left;
-}
-
-.slick-slide,
-.slick-slider{
-  width: 100%;
-  height: 100% 
-}
-
-.clear-fix{
+  display: table;
   clear: both;
 }
+.tab-group li a {
+  display: block;
+  text-decoration: none;
+  padding: 15px;
+  background: rgba(160, 179, 176, 0.25);
+  color: #a0b3b0;
+  font-size: 20px;
+  float: left;
+  width: 50%;
+  text-align: center;
+  cursor: pointer;
+  transition: .5s ease;
+}
+.tab-group li a:hover {
+  background: #179b77;
+  color: #ffffff;
+}
+.tab-group .active a {
+  background: #1ab188;
+  color: #ffffff;
+}
 
-.slick-dots {
+.tab-content > div:last-child {
+  display: none;
+}
+
+h1 {
+  text-align: center;
+  color: #ffffff;
+  font-weight: 300;
+  margin: 0 0 40px;
+}
+
+label {
   position: absolute;
-  bottom: 10px;
+  -webkit-transform: translateY(6px);
+          transform: translateY(6px);
+  left: 13px;
+  color: rgba(255, 255, 255, 0.5);
+  transition: all 0.25s ease;
+  -webkit-backface-visibility: hidden;
+  pointer-events: none;
+  font-size: 22px;
+}
+label .req {
+  margin: 2px;
+  color: #1ab188;
+}
+
+label.active {
+  -webkit-transform: translateY(50px);
+          transform: translateY(50px);
+  left: 2px;
+  font-size: 14px;
+}
+label.active .req {
+  opacity: 0;
+}
+
+label.highlight {
+  color: #ffffff;
+}
+
+input, textarea {
+  font-size: 22px;
   display: block;
   width: 100%;
-  padding: 0;
-  list-style: none;
-  text-align: center;
+  height: 100%;
+  padding: 5px 10px;
+  background: none;
+  background-image: none;
+  border: 1px solid #a0b3b0;
+  color: #ffffff;
+  border-radius: 0;
+  transition: border-color .25s ease, box-shadow .25s ease;
+}
+input:focus, textarea:focus {
+  outline: 0;
+  border-color: #1ab188;
 }
 
-.slick-dots li {
-  position: relative;
-  display: inline-block;
-  width: 20px;
-  height: 20px;
-  margin: 0 3px;
-  padding: 0;
-  cursor: pointer;
+textarea {
+  border: 2px solid #a0b3b0;
+  resize: vertical;
 }
-.slick-dots li button {
-  font-size: 0;
-  display: block;
-  width: 10px;
-  height: 10px;
-  padding: 5px;
-  cursor: pointer;
+
+.field-wrap {
+  position: relative;
+  margin-bottom: 40px;
+}
+
+.top-row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+.top-row > div {
+  float: left;
+  width: 48%;
+  margin-right: 4%;
+}
+.top-row > div:last-child {
+  margin: 0;
+}
+
+.button {
   border: 0;
   outline: none;
-  background: #8dffea;
-  border-radius: 50%;
-  transition: all 0.3s ease;
+  border-radius: 0;
+  padding: 15px 0;
+  font-size: 2rem;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  background: #1ab188;
+  color: #ffffff;
+  transition: all 0.5s ease;
+  -webkit-appearance: none;
+}
+.button:hover, .button:focus {
+  background: #179b77;
 }
 
-.slick-dots li.slick-active button{
-  background-color: #53C5B9;
-  transform: scale(1.6);
-  box-shadow: 0 0 10px #1b1b1b
-}
-
-.img-txt{
-  position: relative;
-}
-
-.img-layer {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: rgba(47, 63, 85, 0.53);
-}
-
-.img-txt h1{
-  position: absolute;
-  display: block;
-  top: 50%;
-  color: #fff;
-  width: 100%;
-  padding: 50px 0;
-  font-size: 45px;
-  font-weight: 100;
-  text-align: center;
-  transform: translateY(-50%);
-  background-color: transparent;
-}
-
-/************ Start Form Container **************/
-
-.top-buttons {
-  position: relative;
+.button-block {
   display: block;
   width: 100%;
-  height: 15%;
-  padding: 25px;
+}
+
+.forgot {
+  margin-top: -20px;
   text-align: right;
-}
-
-.top-buttons button {
-  color: #cacaca;
-  border: none;
-  width: 90px;
-  margin: -2px;
-  padding: 10px;
-  font-size: 16px;
-  font-weight: 300;
-  background: #4c5c72;
-  cursor: pointer;
-}
-
-.top-buttons button:nth-child(1) {
-  border-radius: 50px 0 0 50px;
-}
-
-.top-buttons button:nth-child(2) {
-  border-radius: 0 50px 50px 0;
-}
-
-.top-active-button {
-  color: #fff !important;
-  box-shadow: 0 0 20px #2a2a2a;
-  background: linear-gradient(#a91a32,#a91a32) !important;
-  transition: all 0.3s ease;
-}
-
-.form{
-  width: 100%;
-  height: 85%;
-  padding: 10px 40px;
-}
-
-.form form {
-  width: 100%;
-  height: 100%;
-}
-
-.form form 
-lable,
-input[type="text"],
-input[type="email"],
-input[type="password"] {
-  display: block;
-}
-
-.form form lable {
-  color: #fff;
-  font-size: 16px;
-  font-weight: 300;
-  margin: 6px 0;
-}
-
-p.terms {
-  color: #9E9E9E;
-  margin-bottom: 60px;
-}
-
-.form form 
-input[type="text"],
-input[type="email"], 
-input[type="password"] {
-  color: #000;
-  width: 100%;
-  border: none;
-  font-size: 16px;
-  font-weight: 200;
-  margin-bottom: 45px;
-  padding: 5px 0 10px 0;
-  background: transparent;
-  border-bottom: 1px solid #4c5c72;
-}
-
-.form form input::placeholder{
-  color: #cecece;
-}
-
-.form form a {
-  color: #fff;
-}
-
-input.form-btn {
-  color: #fff;
-  font-size: 18px;
-  font-weight: 300;
-  padding: 12px 55px;
-  margin-right: 20px;
-  border: none;
-  cursor: pointer;
-  border-radius: 35px;
-  transition: all 0.3s linear;
-  box-shadow: 0 0 40px rgba(0, 0, 0, 0.55);
-  background: linear-gradient(to right, #a91a32,#a91a32);
-}
-
-input.form-btn:hover{
-  box-shadow: none
-}
-
-.form-signin{
-  display: none;
-  padding-top: 120px;
 }
