--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -5,8 +5,7 @@
 	<title>Login</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
+	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 
 	<link rel="stylesheet" type="text/css" href="{% static 'css/registration/login.css' %}">
 <!--===============================================================================================-->
@@ -26,16 +25,15 @@
       
       <div class="tab-content">
         <div id="signup">   
-          <h1>Register Now</h1>
+          <h1>Sign Up Here</h1>
           
           <form action="/signup/" method="post">{% csrf_token %}
           
-          <div class="top-row">
             <div class="field-wrap">
               <label>
                 Username<span class="req">*</span>
               </label>
-              <input id="id_username" name="username" type="text" required autocomplete="off" />
+              <input name="username" id="id_username" type="text" required autocomplete="off" />
             </div>
         
 
@@ -43,21 +41,21 @@
             <label>
               Email Address<span class="req">*</span>
             </label>
-            <input id="id_email" name="email" type="email"required autocomplete="off"/>
+            <input name="email" id="id_email" type="email"required autocomplete="off"/>
           </div>
           
           <div class="field-wrap">
             <label>
               Set A Password<span class="req">*</span>
             </label>
-            <input  id="id_password1" name="password1" type="password"required autocomplete="off"/>
+            <input name="password1" id="id_password1" type="password"required autocomplete="off"/>
           </div>
 
           <div class="field-wrap">
             <label>
               Confirm Password<span class="req">*</span>
             </label>
-            <input id="id_password2" name="password2" type="password"required autocomplete="off"/>
+            <input name="password2" id="id_password2" type="password"required autocomplete="off"/>
           </div>
           
           <button type="submit" class="button button-block"/>Get Started</button>
@@ -75,14 +73,14 @@
             <label>
               Email Address<span class="req">*</span>
             </label>
-            <input  name="username" id="id_username" type="email"required autocomplete="off"/>
+            <input name="username" id="id_username" type="email"required autocomplete="off"/>
           </div>
           
           <div class="field-wrap">
             <label>
               Password<span class="req">*</span>
             </label>
-            <input  name="password" id="id_password" type="password"required autocomplete="off"/>
+            <input name="password" id="id_password" type="password"required autocomplete="off"/>
           </div>
           
           <p class="forgot"><a href="#">Forgot Password?</a></p>
